--- a/resume_photo.tex
+++ b/resume_photo.tex
@@ -32,12 +32,12 @@
   \item 使用了 JFinal 框架
 \end{itemize}
 
-\datedsubsection{\textbf{类 PACAL 语言编译器及简易IDE }}{2017年12月 -- 至今}
+\datedsubsection{\textbf{类 PACAL 语言编译器及其运行环境}}{2017年11月 -- 至今}
+https://github.com/jzwdsb/pl0\_compiler
 \role{C++, Qt}{个人项目}
 \begin{itemize}
   \item 容易定制和扩展
   \item 完整的语法支持
-  \item 从 0 开始的编译器实现
 \end{itemize}
 
 \begin{comment}
@@ -81,6 +81,7 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
   \item Blogs: http://jzwdsb.github.io
   \item GitHub: https://github.com/jzwdsb
   \item 语言: 英语 熟练(CET6)
+  \item 四次三等奖学金
 \end{itemize}
 
 %% Reference
