--- a/resume_photo.tex
+++ b/resume_photo.tex
@@ -13,10 +13,10 @@
 
 \Large{
   \begin{tabu}{ clr }
-   \multirow{5}{1in}{\includegraphics[width=0.88in]{avatar}} & \scshape{贾臻玮} & \pbar{C++}{0.75} \\
+   \multirow{5}{1in}{\includegraphics[width=0.88in, height=1.15in]{avatar}} & \scshape{贾臻玮} & \pbar{C++}{0.75} \\
     & \email{manout960920@outlook.com} & \pbar{Java}{0.5} \\
-    & \phone{(+86) 151-000-38767} & \pbar{Linux}{0.6} \\
-    & \github[github.com/jzwdsb]{https://github.com/jzwdsb} & \pbar{Python}{0.5} \\
+    & \phone{(+86) 151-000-38767} & \pbar{Linux}{0.4} \\
+    & \github[github.com/jzwdsb]{https://github.com/jzwdsb} & \pbar{Python}{0.6} \\
    % & \blog[jzwdsb.github.io]{https://jzwdsb.github.io} & \pbar{C}{0.6}
   \end{tabu}
 }
@@ -25,8 +25,8 @@
 \datedsubsection{\textbf{燕山大学}, 秦皇岛}{2015 -- 至今}
 \textit{在读本科生} 计算机科学与技术, 2019 年 6 月份毕业
 
-\section{\faUsers\ Experience}
-\datedsubsection{\textbf{试验机管理平台}}{2017年12月 -- 2017年02月}
+\section{\faUsers\ 项目经历}
+\datedsubsection{\textbf{试验机管理平台}}{2017年12月 -- 2018年02月}
 负责后端开发
 \begin{itemize}
   \item 使用了 JFinal 框架
@@ -45,7 +45,7 @@ https://github.com/jzwdsb/pl0\_compiler
 \role{\LaTeX, Maintainer}{Individual Projects}
 An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 \begin{itemize}
-  \item Easy to be further customized or extended
+  \item Easy to be further customized or extended	
   \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
   \item FontAwesome 4.5.0 support
 \end{itemize}
@@ -67,6 +67,11 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 % \section{\faHeartO\ Honors and Awards}
 % \datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
 % \datedline{Other awards}{2015}
+\section{\faHeartO\ 获奖情况}
+\datedline{\textit{Honorable Mention}, 美赛数学建模}{2018年 2月}
+\datedline{\textit{前 16 强}, 全国并行应用挑战赛}{2017 年 8 月 -- 2017 年 10 月}
+\datedline{\textit{第 17 名}, 秦皇岛计算机技能大赛}{2017 年 12月}
+
 
 \section{\faCogs\ IT 技能}
 % increase linespacing [parsep=0.5ex]
