--- a/resume_photo.tex
+++ b/resume_photo.tex
@@ -13,10 +13,11 @@
 
 \Large{
   \begin{tabu}{ clr }
-   \multirow{5}{1in}{\includegraphics[width=0.88in, height=1.15in]{avatar}} & \scshape{贾臻玮} & \pbar{C++}{0.75} \\
-    & \email{manout960920@outlook.com} & \pbar{Java}{0.5} \\
-    & \phone{(+86) 151-000-38767} & \pbar{Linux}{0.4} \\
-    & \github[github.com/jzwdsb]{https://github.com/jzwdsb} & \pbar{Python}{0.6} \\
+   %\multirow{5}{1in}{\includegraphics[width=0.88in, height=1.15in]{avatar}}
+    & \scshape{贾臻玮} & \pbar{C++}{0.75} \\
+    & \email{manout960920@outlook.com} & \pbar{Python}{0.6} \\
+    & \phone{(+86) 151-000-38767} & \pbar{Java}{0.5} \\
+    & \github[github.com/jzwdsb]{https://github.com/jzwdsb} & \pbar{Python}{0.5} \\
    % & \blog[jzwdsb.github.io]{https://jzwdsb.github.io} & \pbar{C}{0.6}
   \end{tabu}
 }
@@ -25,13 +26,17 @@
 \datedsubsection{\textbf{燕山大学}, 秦皇岛}{2015 -- 至今}
 \textit{在读本科生} 计算机科学与技术, 2019 年 6 月份毕业
 
-\section{\faUsers\ 项目经历}
-\datedsubsection{\textbf{试验机管理平台}}{2017年12月 -- 2018年02月}
-负责后端开发
+\section{\faUsers\ 实习经历}
+\datedsubsection{\textbf{美图公司} 厦门}{2018年6月 -- 至今}
+\role{实习}{C++ 研发工程师}
+负责原前向计算框架中的 Conv 层的优化 \\
+参与内部新前向计算框架的研发
 \begin{itemize}
-  \item 使用了 JFinal 框架
+  \item 优化后 Conv 层的性能提升约 10 \%
+  \item 实现从 MMdnn IR 层网络模型到内部新框架模型的转换工具
 \end{itemize}
 
+\section{\faUsers\ 项目经历}
 \datedsubsection{\textbf{类 PACAL 语言编译器及其运行环境}}{2017年11月 -- 至今}
 https://github.com/jzwdsb/pl0\_compiler
 \role{C++, Qt}{个人项目}
@@ -70,13 +75,12 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 \section{\faHeartO\ 获奖情况}
 \datedline{\textit{Honorable Mention}, 美赛数学建模}{2018年 2月}
 \datedline{\textit{前 16 强}, 全国并行应用挑战赛}{2017 年 8 月 -- 2017 年 10 月}
-\datedline{\textit{第 17 名}, 秦皇岛计算机技能大赛}{2017 年 12月}
 
 
 \section{\faCogs\ IT 技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: c++ > java > python
+  \item 编程语言: C++ > Python > Java
   \item 平台: Linux
   \item 熟悉Qt
 \end{itemize}
@@ -87,6 +91,7 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
   \item GitHub: https://github.com/jzwdsb
   \item 语言: 英语 熟练(CET6)
   \item 四次三等奖学金
+  \item 曾参与学校镜像站的维护
 \end{itemize}
 
 %% Reference
