--- a/resume_photo.tex
+++ b/resume_photo.tex
@@ -28,16 +28,16 @@
 
 \section{\faUsers\ 实习经历}
 \datedsubsection{\textbf{美图公司} 厦门}{2018年6月 -- 至今}
-\role{实习}{C++ 研发工程师}
-负责原前向计算框架中的 Conv 层的优化 \\
+\role{核心性能优化实验室/ AI 优化组}{C++ 研发工程师}
+负责原前向计算框架中的 Conv 层的优化(Arm Neon 汇编级优化) \\
 参与内部新前向计算框架的研发
 \begin{itemize}
   \item 优化后 Conv 层的性能提升约 10 \%
-  \item 实现从 MMdnn IR 层网络模型到内部新框架模型的转换工具
+  \item MMdnn IR 层网络模型到内部神经网络模型的转换工具
 \end{itemize}
 
 \section{\faUsers\ 项目经历}
-\datedsubsection{\textbf{类 PACAL 语言编译器及其运行环境}}{2017年11月 -- 至今}
+\datedsubsection{\textbf{类 PACAL 语言编译器及其运行环境}}{2017年11月 -- 2018年1月}
 https://github.com/jzwdsb/pl0\_compiler
 \role{C++, Qt}{个人项目}
 \begin{itemize}
@@ -81,13 +81,13 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
   \item 编程语言: C++ > Python > Java
-  \item 平台: Linux
+  \item 熟练使用Linux
   \item 熟悉Qt
 \end{itemize}
 
 \section{\faInfo\ 其他}
 \begin{itemize}[parsep=0.5ex]
-  \item Blogs: http://jzwdsb.github.io
+  \item Blogs: https://jzwdsb.github.io
   \item GitHub: https://github.com/jzwdsb
   \item 语言: 英语 熟练(CET6)
   \item 四次三等奖学金
