--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -15,28 +15,43 @@
 
 \basicInfo{
   \email{manout960920@outlook.com} \textperiodcentered\ 
-  \phone{(+86) 151-000-38767} \textperiodcentered\ 
+  \phone{(+86) 151-000-38767} %\textperiodcentered\ 
   %\linkedin[billryan8]{https://www.linkedin.com/in/billryan8}
   }
  
 \section{\faGraduationCap\  教育背景}
 \datedsubsection{\textbf{燕山大学}, 秦皇岛, 河北}{2015 -- 至今}
-\textit{在读本科生}\ 计算机科学与技术
+\textit{在读本科生}\ 计算机科学与技术, 2019 年 7 月毕业
+
+
+\section{\faUsers\ 实习经历}
+\datedsubsection{\textbf{小米公司}\space 北京}{2018 年 9 月 -- 至今}
+\role{人工智能与云平台/AI 平台/深度学习框架组}{软件工程师}
+\begin{onehalfspacing}
+负责 MACE 对嵌入式设备的支持,\space https://github.com/XiaoMi/mace
+\end{onehalfspacing}
+
+\datedsubsection{\textbf{美图公司}\space 厦门}{2018 年 6 月 -- 2018 年 8 月}
+\role{核心性能优化实验室/AI 优化组}{C++ 研发工程师}
+\begin{onehalfspacing}
+负责内部前向计算框架中 Conv 层的 bias 优化　\\
+参与内部新计算框架的研发
+\begin{itemize}
+  \item 优化后 Conv 层的性能提升约 10 \% 
+  \item 实现 MMdnn IR 层到内部新神经网络模型的转换工具
+\end{itemize}
+\end{onehalfspacing}
+
 
 \section{\faUsers\ 项目经历}
-\datedsubsection{\textbf{试验机管理平台网站}}{2017年12月 -- 2018年2月}
-负责后端开发
-\begin{itemize}
-  \item 使用了 JFinal 框架
-\end{itemize}
-
 \datedsubsection{\textbf{类 Pascal 语言 IDE}}{2017 年11月 -- 至今}
 \role{C++}{个人项目}
 \begin{onehalfspacing}
-个人实现的简易 IDE, https://github.com/jzwdsb/Qt\_practice/tree/master/text\_edit
+个人实现的简易 IDE, https://github.com/jzwdsb/pl0\_compiler
 \begin{itemize}
-  \item 容易定制和扩展
   \item 完善的语法支持，使用自己实现的编译器
+  \item 使用 Qt 编写图形界面
+  \item 支持编译和逐指令调试
 \end{itemize}
 \end{onehalfspacing}
 
@@ -47,23 +62,29 @@
 %  \item main contribution
 %\end{itemize}
 
+\section{\faHeartO\ 获奖情况}
+\datedline{\textbf{Hornourable Mention}, 美赛数学建模}{2018 年 2 月}
+\datedline{\textit{第 17 名}, 秦皇岛计算机技能大赛}{2017 年 12月}
+\datedline{\textit{前 16 强}, 并行应用挑战赛}{2017 年 8 月 -- 2017 年 10 月}
+
 \section{\faCogs\ IT 技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: c++ > java > python
-  \item 平台: Linux
+  \item 编程语言: C++ > Python > Java
+  \item 熟悉 Linux 平台
+  \item 熟悉 Qt
 \end{itemize}
 
-\section{\faHeartO\ 获奖情况}
-\datedline{\textit{前 16 强}, 并行应用挑战赛}{2017 年 8 月 -- 2017 年 10 月}
-\datedline{\textit{第 17 名}, 秦皇岛计算机技能大赛}{2017 年 12月}
+
 
 \section{\faInfo\ 其他}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
   \item 技术博客: https://jzwdsb.github.io
   \item GitHub: https://github.com/jzwdsb
-  \item 语言: 英语 - 熟悉(CET 6)
+  \item 语言: 英语 - 熟练(CET 6)
+  \item 年级排名前 20 \%
+  \item 五次三等奖学金
 \end{itemize}
 
 %% Reference
