--- a/resume_photo.tex
+++ b/resume_photo.tex
@@ -27,7 +27,7 @@
 \textit{在读本科生} 计算机科学与技术, 2019 年 6 月份毕业
 
 \section{\faUsers\ 实习经历}
-\datedsubsection{\textbf{美图公司} 厦门}{2018年6月 -- 至今}
+\datedsubsection{\textbf{美图公司} 厦门}{2018年6月 -- 2018年8月}
 \role{核心性能优化实验室/ AI 优化组}{C++ 研发工程师}
 负责原前向计算框架中的 Conv 层的优化(Arm Neon 汇编级优化) \\
 参与内部新前向计算框架的研发
