--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -34,12 +34,8 @@
 \datedsubsection{\textbf{美图公司}\space 厦门}{2018 年 6 月 -- 2018 年 8 月}
 \role{核心性能优化实验室/AI 优化组}{C++ 研发工程师}
 \begin{onehalfspacing}
-负责内部前向计算框架中 Conv 层的 bias 优化　\\
-参与内部新计算框架的研发
-\begin{itemize}
-  \item 优化后 Conv 层的性能提升约 10 \% 
-  \item 实现 MMdnn IR 层到内部新神经网络模型的转换工具
-\end{itemize}
+负责 AI 推理框架中 Conv 层的 bias 优化　\\
+参与新 AI 推理框架的研发
 \end{onehalfspacing}
 
 
