--- a/resume_photo.tex
+++ b/resume_photo.tex
@@ -13,7 +13,7 @@
 
 \Large{
   \begin{tabu}{ clr }
-   %\multirow{5}{1in}{\includegraphics[width=0.88in, height=1.15in]{avatar}}
+   \multirow{5}{1in}{\includegraphics[width=0.88in, height=1.15in]{avatar}}
     & \scshape{贾臻玮} & \pbar{C++}{0.75} \\
     & \email{manout960920@outlook.com} & \pbar{Python}{0.6} \\
     & \phone{(+86) 151-000-38767} & \pbar{Java}{0.5} \\
@@ -27,13 +27,15 @@
 \textit{在读本科生} 计算机科学与技术, 2019 年 6 月份毕业
 
 \section{\faUsers\ 实习经历}
-\datedsubsection{\textbf{美图公司} 厦门}{2018年6月 -- 2018年8月}
+\datedsubsection{\textbf{小米公司}\space 北京}{2019年9月 -- 至今}
+\role{人工智能与云平台/ AI 平台/ 深度学习框架组}{软件工程师}
+负责 MACE 对嵌入式设备的支持. https://github.com/XiaoMi/mace	
+
+
+\datedsubsection{\textbf{美图公司}\space 厦门}{2018年6月 -- 2018年8月}
 \role{核心性能优化实验室/ AI 优化组}{C++ 研发工程师}
 负责原前向计算框架中的 Conv 层的优化(Arm Neon 汇编级优化) \\
 参与内部新前向计算框架的研发
-\begin{itemize}
-  \item 优化后 Conv 层的性能提升约 10 \%
-  \item MMdnn IR 层网络模型到内部神经网络模型的转换工具
 \end{itemize}
 
 \section{\faUsers\ 项目经历}
